<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="numPax">Num of Pax</string>
    <string name="ttBill">Total Bill: $</string>
    <string name="ecPays">Each Pays: $</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="svsDisabled">No Svs</string>
    <string name="svsEnabled">Svs</string>
    <string name="gstDisabled">No Gst</string>
    <string name="gstEnabled">Gst</string>
    <string name="discount">Discount (%)</string>
</resources>